fix(UI): hide nav logo on mobile

--- a/src/assets/common/nav.scss
+++ b/src/assets/common/nav.scss
@@ -16,7 +16,7 @@ nav {
   transition: transform 0.3s ease-in-out;
   transform: translateY(0);
 
-  div {
+  a.logo {
     display: none;
   }
 
@@ -85,21 +85,21 @@ button.fab {
 @media (min-width: $sm) {
   nav {
     flex-direction: column;
-    gap: 0.5rem;
+    gap: 0.8rem;
     justify-content: start;
     width: $nav-aside-width;
     height: 100%;
     padding: 1rem;
 
     @include border(right);
+  }
 
-    div {
-      display: flex;
-      gap: 0.4rem;
-      align-items: center;
-      width: 100%;
-      height: 3rem;
-    }
+  a.logo {
+    display: flex;
+    gap: 0.4rem;
+    align-items: center;
+    width: 100%;
+    height: 3rem;
 
     h1 {
       font-size: 1.2rem;
@@ -109,7 +109,7 @@ button.fab {
       -webkit-text-fill-color: transparent;
     }
 
-    img.logo {
+    img {
       height: 100%;
       padding: 0.3rem;
       border-radius: 12px;
